@@ -62,6 +62,7 @@
                 <configuration>
                     <compilerArgs>
                         <arg>-parameters</arg>
+                        <arg>-proc:full</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -112,7 +113,7 @@
                 <version>3.1.2</version>
                 <configuration>
                     <reuseForks>false</reuseForks>
-                    <argLine>${argLine} -Dapp_home=${project.build.directory}</argLine>
+                    <argLine>${argLine} -XX:+EnableDynamicAgentLoading -Dapp_home=${project.build.directory}</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -155,12 +156,12 @@
                 <plugin>
                     <groupId>com.github.spotbugs</groupId>
                     <artifactId>spotbugs-maven-plugin</artifactId>
-                    <version>4.7.3.5</version>
+                    <version>4.7.3.6</version>
                     <dependencies>
                         <dependency>
                             <groupId>com.github.spotbugs</groupId>
                             <artifactId>spotbugs</artifactId>
-                            <version>4.7.3</version>
+                            <version>4.8.0</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -177,7 +178,7 @@
                         <dependency>
                             <groupId>com.puppycrawl.tools</groupId>
                             <artifactId>checkstyle</artifactId>
-                            <version>10.12.1</version>
+                            <version>10.12.4</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -208,7 +209,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>4.0.0-M9</version>
+                    <version>4.0.0-M10</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -501,35 +502,35 @@
     </dependencies>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
 
         <jdbc.groupId>org.mariadb.jdbc</jdbc.groupId>
         <jdbc.artifactId>mariadb-java-client</jdbc.artifactId>
-        <jdbc.version>3.1.4</jdbc.version>
+        <jdbc.version>3.2.0</jdbc.version>
 
-        <byte-buddy.version>1.14.5</byte-buddy.version>
+        <byte-buddy.version>1.14.9</byte-buddy.version>
         <commons-lang3.version>3.13.0</commons-lang3.version>
         <ehcache.version>3.10.8</ehcache.version>
         <freemarker.version>2.3.32</freemarker.version>
         <freemarker-java8.version>2.1.0</freemarker-java8.version>
         <greenmail.version>2.0.0</greenmail.version>
-        <hibernate.version>6.2.7.Final</hibernate.version>
-        <hibernate-search.version>6.2.0.Final</hibernate-search.version>
+        <hibernate.version>6.3.1.Final</hibernate.version>
+        <hibernate-search.version>6.2.2.Final</hibernate-search.version>
         <HikariCP.version>5.0.1</HikariCP.version>
         <jakarta.mail.version>2.0.1</jakarta.mail.version>
-        <jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
-        <jaxb-runtime.version>4.0.3</jaxb-runtime.version>
-        <jsoup.version>1.16.1</jsoup.version>
+        <jakarta.xml.bind-api.version>4.0.1</jakarta.xml.bind-api.version>
+        <jaxb-runtime.version>4.0.4</jaxb-runtime.version>
+        <jsoup.version>1.16.2</jsoup.version>
         <junit-jupiter.version>5.10.0</junit-jupiter.version>
-        <logback.version>1.4.8</logback.version>
-        <log4j.version>2.20.0</log4j.version>
-        <lombok.version>1.18.28</lombok.version>
+        <logback.version>1.4.11</logback.version>
+        <log4j.version>2.21.0</log4j.version>
+        <lombok.version>1.18.30</lombok.version>
         <lucene.version>8.11.2</lucene.version>
-        <mockito.version>5.4.0</mockito.version>
-        <slf4j.version>2.0.7</slf4j.version>
-        <spring.version>6.0.11</spring.version>
-        <spring-data.version>3.1.2</spring-data.version>
+        <mockito.version>5.6.0</mockito.version>
+        <slf4j.version>2.0.9</slf4j.version>
+        <spring.version>6.0.13</spring.version>
+        <spring-data.version>3.1.5</spring-data.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <copyright.year>2013</copyright.year>
